<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/driverCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="#e5e5e5"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="1dp"
    >

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="16dp"
      >

    <com.pkmmte.view.CircularImageView
        android:id="@+id/profileImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/progress_animation"
        app:border="true"
        app:border_color="@color/primary"
        app:border_width="1dp"
        app:shadow="true"
        />

    <TextView
        android:id="@+id/driverNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/profileImageView"
        android:layout_toRightOf="@+id/profileImageView"
        android:text="@string/driver_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@color/accent_amber"
        />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverNameTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/telLabel"
        android:layout_toRightOf="@+id/telLabel"
        android:text="@string/driver_phone_number"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:textColor="@color/primary"
        />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/ratingLabel"
        android:layout_toRightOf="@+id/ratingLabel"
        android:text="@string/driver_rating"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:textColor="@color/primary"
        />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/profileImageView"
        android:layout_toRightOf="@+id/profileImageView"
        android:text="Rating:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_slate_gray"
        />

    <TextView
        android:id="@+id/telLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverNameTextView"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/profileImageView"
        android:layout_toRightOf="@+id/profileImageView"
        android:text="Tel:"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_slate_gray"
        />

  </RelativeLayout>

</android.support.v7.widget.CardView>